--- a/ClientApp/app/components/fetchdata/fetchdata.component.html
+++ b/ClientApp/app/components/fetchdata/fetchdata.component.html
@@ -15,7 +15,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let person of people" *ngClick="alert('test')">
+        <tr *ngFor="let person of people">
             <td>{{ person.firstName }}</td>
             <td>{{ person.lastName }}</td>
             <td>{{ person.dateOfBirth }}</td>
