--- a/ClientApp/app/components/fetchdata/fetchdata.component.html
+++ b/ClientApp/app/components/fetchdata/fetchdata.component.html
@@ -3,9 +3,9 @@
 <p>This component demonstrates fetching data from the server.</p>
 
 <p *ngIf="!people"><em>Loading...</em></p>
-
-<table class='table' *ngIf="people">
-    <thead>
+ 
+<table class='table table-hover table-inverse' *ngIf="people">
+    <thead class='thead thead-inverse'>
         <tr>
             <th>First Name</th>
             <th>Last Name</th>
@@ -15,8 +15,8 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let person of people">
-            <td>{{ person.firstName }}</td>
+        <tr *ngFor="let person of people" class="success">
+            <td scope="row" >{{ person.firstName }}</td>
             <td>{{ person.lastName }}</td>
             <td>{{ person.dateOfBirth }}</td>
             <td>{{ person.height }}cm</td>
